[package]
name = "launch-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5.1"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.3"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"
